# wu-manber-fuzzy-search

./: CHANGES.md  README.md  dune-project  dune-workspace.dev  index.html  wu-manber-fuzzy-search.opam  wu-manber.opam
lib/: dune  firstMatch.ml  firstMatch.mli  index.mld  matcher.ml  matcher.mli  patterns.ml  slowMatcher.ml  specialized.ml  specialized.mli  stringSearch.ml  utils.ml  wuManber.ml  wuManber.mli
test/: automata.t  automata_right.t  cram.t  dune  slowMatcher.ml  specialized.t  string_tests.ml
test-runners/: automata_tests.ml  dune  slowMatcher.ml  specialized_compare.ml  string_tests.ml
wu-manber-fuzzy-search/: index.html
wu-manber-fuzzy-search/Wu_Manber/: index.html
wu-manber-fuzzy-search/Wu_Manber/FirstMatch/: index.html
wu-manber-fuzzy-search/Wu_Manber/FirstMatch/Make/: index.html
wu-manber-fuzzy-search/Wu_Manber/Matcher/: index.html
wu-manber-fuzzy-search/Wu_Manber/Matcher/MakeArrayMatcher/: index.html
wu-manber-fuzzy-search/Wu_Manber/Matcher/MakeHashTblMatcher/: index.html
wu-manber-fuzzy-search/Wu_Manber/Matcher/MakeSlowMatcher/: index.html
wu-manber-fuzzy-search/Wu_Manber/Matcher/SimpleMismatch/: index.html
wu-manber-fuzzy-search/Wu_Manber/Matcher/module-type-Matcher/: index.html
wu-manber-fuzzy-search/Wu_Manber/Patterns/: index.html
wu-manber-fuzzy-search/Wu_Manber/Patterns/module-type-Elems/: index.html
wu-manber-fuzzy-search/Wu_Manber/Patterns/module-type-ElemsIndexable/: index.html
wu-manber-fuzzy-search/Wu_Manber/StringSearch/: index.html
wu-manber-fuzzy-search/Wu_Manber/Utils/: index.html
wu-manber-fuzzy-search/Wu_Manber/WuManber/: index.html
wu-manber-fuzzy-search/Wu_Manber__FirstMatch/: index.html
wu-manber-fuzzy-search/Wu_Manber__Matcher/: index.html
wu-manber-fuzzy-search/Wu_Manber__Patterns/: index.html
wu-manber-fuzzy-search/Wu_Manber__StringSearch/: index.html
wu-manber-fuzzy-search/Wu_Manber__Utils/: index.html
wu-manber-fuzzy-search/Wu_Manber__WuManber/: index.html
(+26 files in other folders)
